shell1/joberror.21749.out
WARNING:tensorflow:From /home/y20212721/tools/miniconda3/envs/tensorflow/lib/python3.7/site-packages/tensorflow_core/python/compat/v2_compat.py:88: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.
Instructions for updating:
non-resource variables are not supported in the long term
Traceback (most recent call last):
  File "main.py", line 9, in <module>
    from include.Model import build, training, test1
  File "/home/y20212721/Youngtop/code_ja_relation/include/Model.py", line 1435
    ref_set()=ref
    ^
SyntaxError: can't assign to function call
